assignment 6 and lab 5

--- a/JupyterNotebooks/Labs/Lab 1.ipynb
+++ b/JupyterNotebooks/Labs/Lab 1.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -161,10 +161,10 @@
    ],
    "source": [
     "// Define a variable and print it out. Then alter the same variable and print it out. This can be through string concatenation or addition, etc.\r\n",
-    "int num1 = 100;\r\n",
-    "System.out.println(\"The variable is \" + num1);\r\n",
-    "int num1 = 101;\r\n",
-    "System.out.println(\"The new variable is \" + num1);"
+    "int num = 100;\r\n",
+    "System.out.println(\"The variable is \" + num);\r\n",
+    "int num = 101;\r\n",
+    "System.out.println(\"The new variable is \" + num);"
    ]
   }
  ],
