--- a/JupyterNotebooks/Lessons/Lesson 3.ipynb
+++ b/JupyterNotebooks/Lessons/Lesson 3.ipynb
@@ -398,6 +398,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boolean pb = true; \r\n",
+    "boolean jelly = "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
