--- a/JupyterNotebooks/Labs/Lab 4.ipynb
+++ b/JupyterNotebooks/Labs/Lab 4.ipynb
@@ -42,6 +42,15 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.8.5 32-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "d4102d28b634c36488181235f92707447efc34bbcd8b2d495e81c34c07eb0f2d"
+    }
+   },
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -52,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.5"
   },
   "orig_nbformat": 2
  },
